Implement review comments